--- a/wiki/fr/TechDraw_ExtensionCreateHorizChainDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateHorizChainDimension.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionCreateHorizChainDimension/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionCreateHorizChainDimension&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionCreateHorizChainDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungHorizontaleMa&szlig;kette (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionCreateHorizChainDimension.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionCreateHorizChainDimension (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionCreateHorizChainDimension.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw&#720; Quote in Serie Orizzontale (44% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ExtensionCreateHorizChainDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Seria wymiar&oacute;w poziomo (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ko/TechDraw_ExtensionCreateHorizChainDimension.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#49688;&#54217; &#51649;&#47148; &#52824;&#49688; (44% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -12,7 +12,6 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -23,7 +22,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Extensions&nbsp;: cotes &rarr; Cotes horizontales
+<td class="ctEven">TechDraw &rarr; Formater/organiser les cotes &rarr; Chaine de cotes horizontales
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -52,7 +51,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <div class="mw-translate-fuzzy">
 <p>L'outil <b>TechDraw Cotes horizontales</b> cr&eacute;e une cha&icirc;ne horizontale de cotes&nbsp;: une s&eacute;quence de cotes align&eacute;es.
@@ -120,35 +118,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125095740
+Cached time: 20260125100219
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.076 seconds
-Real time usage: 0.108 seconds
-Preprocessor visited node count: 381/1000000
-Post&#8208;expand include size: 26788/2097152 bytes
-Template argument size: 10611/2097152 bytes
+CPU time usage: 0.091 seconds
+Real time usage: 0.140 seconds
+Preprocessor visited node count: 380/1000000
+Post&#8208;expand include size: 26828/2097152 bytes
+Template argument size: 10651/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1607/5000000 bytes
+Unstrip post&#8208;expand size: 1608/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.385      1 -total
- 27.25%    6.646      1 Template:TechDraw_Tools_navi/fr
- 20.08%    4.896      2 Template:Navigation_menu_2
- 11.95%    2.915      1 Template:Userdocnavi/fr
- 10.10%    2.464      1 Template:GuiCommand/fr
-  9.11%    2.222      1 Template:Value
-  8.29%    2.021      2 Template:Docnav/fr
-  7.22%    1.760      1 Template:VersionMinus/fr
-  7.15%    1.743      1 Template:Version/fr
-  5.72%    1.396      1 Template:Caption
+100.00%   36.537      1 -total
+ 25.06%    9.156      1 Template:TechDraw_Tools_navi/fr
+ 20.03%    7.319      2 Template:Navigation_menu_2
+ 14.90%    5.443      1 Template:Value
+ 11.42%    4.172      1 Template:Userdocnavi/fr
+  9.77%    3.568      1 Template:Incode
+  9.13%    3.334      2 Template:Docnav/fr
+  8.27%    3.021      1 Template:GuiCommand/fr
+  7.15%    2.613      1 Template:VersionMinus/fr
+  6.25%    2.285      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277844-0!canonical and timestamp 20260125095740 and revision id 1743542. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277844-0!canonical and timestamp 20260125100219 and revision id 1743545. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
