--- a/wiki/fr/TechDraw_ExtensionCreateHorizChainDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateHorizChainDimension.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionCreateHorizChainDimension/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionCreateHorizChainDimension&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionCreateHorizChainDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungHorizontaleMa&szlig;kette (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionCreateHorizChainDimension.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionCreateHorizChainDimension (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionCreateHorizChainDimension.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw&#720; Quote in Serie Orizzontale (44% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ExtensionCreateHorizChainDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Seria wymiar&oacute;w poziomo (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ko/TechDraw_ExtensionCreateHorizChainDimension.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#49688;&#54217; &#51649;&#47148; &#52824;&#49688; (44% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -52,11 +52,8 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<div class="mw-translate-fuzzy">
 <p>L'outil <b>TechDraw Cotes horizontales</b> cr&eacute;e une cha&icirc;ne horizontale de cotes&nbsp;: une s&eacute;quence de cotes align&eacute;es.
-</p>
-</div>
-<p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizChainDimensionExample.png&amp;filetimestamp=20211111163116&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizChainDimensionExample.png" decoding="async" width="400" height="142" class="mw-file-element" data-file-width="898" data-file-height="319"></a></span>
+</p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizChainDimensionExample.png&amp;filetimestamp=20211111163116&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizChainDimensionExample.png" decoding="async" width="400" height="142" class="mw-file-element" data-file-width="898" data-file-height="319"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">A droite, les cotes cr&eacute;&eacute;es</p>
 <p><span id="Usage"></span>
@@ -116,35 +113,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125100327
+Cached time: 20260125100355
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.084 seconds
-Real time usage: 0.108 seconds
-Preprocessor visited node count: 379/1000000
+CPU time usage: 0.088 seconds
+Real time usage: 0.114 seconds
+Preprocessor visited node count: 378/1000000
 Post&#8208;expand include size: 26858/2097152 bytes
 Template argument size: 10681/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1608/5000000 bytes
+Unstrip post&#8208;expand size: 1612/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.311      1 -total
- 25.83%    5.763      1 Template:TechDraw_Tools_navi/fr
- 20.63%    4.603      2 Template:Navigation_menu_2
- 13.01%    2.902      1 Template:Userdocnavi/fr
- 10.34%    2.308      1 Template:Value
-  9.90%    2.209      2 Template:Docnav/fr
-  9.60%    2.141      1 Template:GuiCommand/fr
-  6.10%    1.361      1 Template:Version/fr
-  5.59%    1.247      1 Template:Caption
-  5.54%    1.235      1 Template:VersionMinus/fr
+100.00%   30.589      1 -total
+ 25.63%    7.839      1 Template:TechDraw_Tools_navi/fr
+ 23.63%    7.227      2 Template:Navigation_menu_2
+ 18.99%    5.808      1 Template:Userdocnavi/fr
+ 10.51%    3.216      1 Template:Value
+  9.68%    2.961      2 Template:Docnav/fr
+  7.11%    2.175      1 Template:GuiCommand/fr
+  5.74%    1.757      1 Template:Incode
+  5.58%    1.708      1 Template:Version/fr
+  5.39%    1.648      1 Template:VersionMinus/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277844-0!canonical and timestamp 20260125100327 and revision id 1743547. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277844-0!canonical and timestamp 20260125100355 and revision id 1743549. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
